cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug217858.cpp
int bug217858_main(int argc, char** argv) {
    static_assert(true, u8"aa");
    return 0;
}
